@@ -1,14 +1,11 @@
 package mesosphere.marathon
 package integration
 
-import java.io.File
-import java.util.UUID
 import java.util.concurrent.atomic.AtomicInteger
 
 import mesosphere.AkkaIntegrationTest
 import mesosphere.marathon.integration.setup._
 import mesosphere.marathon.state.PathId
-import org.apache.commons.io.FileUtils
 import org.scalatest.Inspectors
 import org.scalatest.concurrent.Eventually
 
@@ -69,7 +66,7 @@ class RestartIntegrationTest extends AkkaIntegrationTest with MesosClusterTest w
         createApp.instances shouldBe 2 withClue (s"${appId} has ${createApp.instances} instances running but there should be 2.")
 
         val created = f.marathon.createAppV2(createApp)
-        created.code should be (201) withClue (s"Response ${created.code}: ${created.entityString}")
+        created should be(Created)
         f.waitForDeployment(created)
 
         When("updating the app")
@@ -87,11 +84,13 @@ class RestartIntegrationTest extends AkkaIntegrationTest with MesosClusterTest w
         val updatedTasks = updated.filter(_.version.contains(newVersion))
         val updatedTaskIds: List[String] = updatedTasks.map(_.id)
         updatedTaskIds should have size 2 withClue (s"${appId} has ${updatedTaskIds.size} updated tasks but there should be 2.")
+
+        And("new tasks are running")
         eventually {
           forAll (updatedTasks) { _.state should be("TASK_RUNNING") }
         }
 
-        When("The first task is ready")
+        Given("The first task is ready")
         val firstTaskReadinessCheck :: otherTaskReadinessChecks =
           updatedTaskIds.map(taskId => f.registerProxyReadinessCheck(appId, "v2", Some(taskId)))
         firstTaskReadinessCheck.isReady.set(true)
@@ -122,112 +121,76 @@ class RestartIntegrationTest extends AkkaIntegrationTest with MesosClusterTest w
       }
     }
     "health checks" should {
-      "deployment with 1 healthy and 1 unhealthy instance is continued properly after master abdication" in withMarathon("health-check") { (server, f) =>
-        val healthCheck: raml.AppHealthCheck = raml.AppHealthCheck(
-          path = Some("/v1/plan"),
+      "deployment with 2 unhealthy instances is continued properly after master abdication" in withMarathon("health-check") { (server, f) =>
+        val ramlHealthCheck: raml.AppHealthCheck = raml.AppHealthCheck(
+          path = Some("/health"),
           portIndex = Some(0),
           intervalSeconds = 2,
           timeoutSeconds = 1,
           protocol = raml.AppHealthCheckProtocol.Http)
-        val appId = f.testBasePath / "app"
-        val create = f.appProxy(appId, versionId = "v1", instances = 2, healthCheck = None)
 
-        val plan = "phase(block1)"
-        val update = raml.AppUpdate(
-          cmd = Some(s"""${serviceMockScript(f)} '$plan'"""),
+        Given("a new simple app with 2 instances")
+        val appId = nextAppId(f)
+        val createApp = f.appProxy(appId, versionId = "v1", instances = 2, healthCheck = None)
+        val created = f.marathon.createAppV2(createApp)
+        created should be(Created)
+        f.waitForDeployment(created)
+
+        logger.debug(s"Started app: ${f.marathon.app(appId).entityPrettyJsonString}")
+
+        And("an update with health checks enabled")
+        val updateApp = raml.AppUpdate(
           portDefinitions = Some(immutable.Seq(raml.PortDefinition(name = Some("http")))),
-          healthChecks = Some(Set(healthCheck)))
+          healthChecks = Some(Set(ramlHealthCheck)))
 
-        testDeployments(server, f, appId, create, update)
+        And("both new task will be unhealthy")
+        val healthCheck = f.registerAppProxyHealthCheck(appId, "v1", state = false)
+
+        When("updating the app")
+        val appV2 = f.marathon.updateApp(appId, updateApp)
+
+        Then("new tasks are started")
+        val updated = f.waitForTasks(appId, 4) withClue (s"The new tasks for ${appId} did not start running.") //make sure there are 2 additional tasks
+
+        val newVersion = appV2.value.version.toString
+        val updatedTasks = updated.filter(_.version.contains(newVersion))
+        val updatedTaskIds: List[String] = updatedTasks.map(_.id)
+        updatedTaskIds should have size 2 withClue (s"Update ${updatedTaskIds.size} instead of 2 for ${appId}")
+
+        And("new tasks are running")
+        eventually {
+          forAll (updatedTasks) { _.state should be("TASK_RUNNING") }
+        }
+
+        logger.debug(s"Updated app: ${f.marathon.app(appId).entityPrettyJsonString}")
+
+        When("we force the leader to abdicate to simulate a failover")
+        server.restart().futureValue
+        f.waitForSSEConnect()
+
+        Then("there is still one ongoing deployment")
+        val deployments = f.marathon.listDeploymentsForBaseGroup().value
+        deployments should have size 1 withClue (s"Expected 1 ongoing deployment but found ${deployments}")
+
+        When("both updated task become healthy")
+        healthCheck.state = true
+
+        Then("the app should eventually have only 2 tasks launched")
+        f.waitForTasks(appId, 2) should have size 2
+
+        And("app was deployed successfully")
+        f.waitForDeployment(appV2)
+
+        val after = f.marathon.tasks(appId)
+        val afterTaskIds = after.value.map(_.id)
+        logger.debug(s"App after restart: ${f.marathon.app(appId).entityPrettyJsonString}")
+
+        And("taskIds after restart should be equal to the updated taskIds (not started ones)")
+        afterTaskIds.sorted should equal (updatedTaskIds.sorted)
       }
     }
   }
 
-  private def testDeployments(server: LocalMarathon, f: MarathonTest, appId: PathId, createApp: raml.App, updateApp: raml.AppUpdate): Unit = {
-    Given("a new simple app with 2 instances")
-    createApp.instances shouldBe 2 withClue (s"There are ${createApp.instances} running instead of 2 for ${appId}")
-
-    val created = f.marathon.createAppV2(createApp)
-    created.code should be (201) withClue (s"Response ${created.code}: ${created.entityString}")
-    f.waitForDeployment(created)
-
-    logger.debug(s"Started app: ${f.marathon.app(appId).entityPrettyJsonString}")
-
-    When("updating the app")
-    val appV2 = f.marathon.updateApp(appId, updateApp)
-
-    And("new tasks are started and running")
-    val updated = f.waitForTasks(appId, 4) withClue (s"The new tasks for ${appId} did not start running.") //make sure there are 2 additional tasks
-
-    val newVersion = appV2.value.version.toString
-    val updatedTasks = updated.filter(_.version.contains(newVersion))
-    val updatedTaskIds: List[String] = updatedTasks.map(_.id)
-    updatedTaskIds should have size 2 withClue (s"Update ${updatedTaskIds.size} instead of 2 for ${appId}")
-
-    logger.debug(s"Updated app: ${f.marathon.app(appId).entityPrettyJsonString}")
-
-    And("ServiceMock1 is up")
-    val serviceFacade1 = ServiceMockFacade(f.marathon.tasks(appId).value) { task =>
-      task.version.contains(newVersion) && task.launched
-    }
-    And("We trigger the first new task to continue service migration")
-    serviceFacade1.continue()
-
-    When("we force the leader to abdicate to simulate a failover")
-    server.restart().futureValue
-    f.waitForSSEConnect()
-
-    And("second updated task becomes healthy")
-    val serviceFacade2 = ServiceMockFacade(f.marathon.tasks(appId).value) { task =>
-      task != serviceFacade1.task && task.version.contains(newVersion) && task.launched
-    }
-    And("We trigger the second new task to continue service migration")
-    serviceFacade2.continue()
-
-    Then("the app should eventually have only 2 tasks launched")
-    f.waitForTasks(appId, 2) should have size 2
-
-    And("app was deployed successfully")
-    f.waitForDeployment(appV2)
-
-    val after = f.marathon.tasks(appId)
-    val afterTaskIds = after.value.map(_.id)
-    logger.debug(s"App after restart: ${f.marathon.app(appId).entityPrettyJsonString}")
-
-    And("taskIds after restart should be equal to the updated taskIds (not started ones)")
-    afterTaskIds.sorted should equal (updatedTaskIds.sorted)
-  }
-
   val appIdCount = new AtomicInteger()
   def nextAppId(f: MarathonTest): PathId = f.testBasePath / s"app-${appIdCount.getAndIncrement()}"
-  /**
-    * Create a shell script that can start a service mock
-    */
-  def serviceMockScript(f: MarathonTest): String = {
-    val uuid = UUID.randomUUID.toString
-    f.appProxyIds(_ += uuid)
-    val javaExecutable = sys.props.get("java.home").fold("java")(_ + "/bin/java")
-    val classPath = sys.props.getOrElse("java.class.path", "target/classes").replaceAll(" ", "")
-    val main = classOf[ServiceMock].getName
-    val limitThreads = Seq(
-      "-XX:+UseConcMarkSweepGC", "-XX:ConcGCThreads=2",
-      // lower the memory pressure by limiting threads.
-      "-Dakka.actor.default-dispatcher.fork-join-executor.parallelism-min=2",
-      "-Dakka.actor.default-dispatcher.fork-join-executor.factor=1",
-      "-Dakka.actor.default-dispatcher.fork-join-executor.parallelism-max=4",
-      "-Dscala.concurrent.context.minThreads=2",
-      "-Dscala.concurrent.context.maxThreads=32"
-    ).mkString(" ")
-    val run = s"""$javaExecutable $limitThreads -DappProxyId=$uuid -DtestSuite=$suiteName -Xmx64m -classpath $classPath $main"""
-    val file = File.createTempFile("serviceProxy", ".sh")
-    file.deleteOnExit()
-
-    FileUtils.write(
-      file,
-      s"""#!/bin/sh
-         |set -x
-         |exec $run $$*""".stripMargin)
-    file.setExecutable(true)
-    file.getAbsolutePath
-  }
 }
